about name changed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="uk-height-large uk-height-responsive uk-padding uk-dark content-anim">
                             <div class="uk-section">
                                 <div class="uk-container">                    
-                                    <h3>About Zeros</h3>                    
+                                    <h3>About Edbase</h3>                    
                                     <div class="uk-grid-match" uk-grid>
                                         <div>
                                             <p>
