--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
                 <div class="uk-background-cover uk-dark uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" uk-parallax="bgy: -400" style="background-image: url('img/home.jpg');">                                        
                     <div class="uk-flex uk-flex-column uk-animation-slide-top-small uk-padding">
                         <p class="uk-margin-small-bottom zeros-sub-head">Sign up Here For the Web Access</p>
-                        <button class="uk-button uk-button-danger">Sign Up</button>
+                        <a href="studentForm.html" class="uk-button uk-button-danger">Sign Up</a>
+                        <!-- <button class="uk-button uk-button-danger">Sign Up</button> -->
                     </div>                    
                 </div>
             </div>
