--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         <div class="main-section-content">
             <div>
                 <div class="uk-background-cover uk-dark uk-panel" style="background-image: url(img/home1.jpg);">
-                    <div class="h-100 uk-flex uk-flex-center uk-flex-bottom uk-text-center">
-                        <div class="uk-flex-column">
-                            <img src="img/edbase.png" width="685" alt="logo" uk-img>
+                    <div class="uk-overlay-primary uk-position-cover"></div>                     
+                    <div class="h-100 uk-flex uk-flex-center uk-flex-bottom uk-text-center">                           
+                        <div class="uk-flex-column">                            
                             <div class="uk-padding uk-flex uk-flex-column uk-animation-slide-top-small">
+                                <img class="uk-padding-small" src="img/edbase.png" width="685" alt="logo" uk-img>                                                                  
                                 <div>
                                     <div class="uk-card uk-card-default uk-card-hover uk-card-body">
                                         <p class="zeros-sub-head">Online Coaching Platform</p>                                        
                                     </div>
                                 </div>                            
-                            </div>  
+                            </div>                                                          
                         </div>                                                  
                     </div>
                 </div>
@@ -122,8 +123,9 @@
         <div class="uk-grid-collapse" uk-grid>
             <div class="uk-width-1-1">
                 <div class="uk-background-cover uk-dark uk-height-medium uk-panel uk-flex uk-flex-center uk-flex-middle" uk-parallax="bgy: -400" style="background-image: url('img/home.jpg');">                                        
+                    <div class="uk-overlay-primary uk-position-cover"></div>   
                     <div class="uk-flex uk-flex-column uk-animation-slide-top-small uk-padding">
-                        <p class="uk-margin-small-bottom zeros-sub-head">Sign up Here For the Web Access</p>
+                        <p class="uk-margin-small-bottom edbase-sub-head">Sign up Here For the Web Access</p>
                         <a href="studentForm.html" class="uk-button uk-button-danger">Sign Up</a>
                         <!-- <button class="uk-button uk-button-danger">Sign Up</button> -->
                     </div>                    
